--- a/src/components/layout/header/header.sass
+++ b/src/components/layout/header/header.sass
@@ -12,20 +12,80 @@ header
         .left-nav
             @include flex($align: center)
             margin-left: 1rem
+            z-index: 1
             img
                 width: 30px
             ul
                 display: none
         .right-nav
-            display: none
+            @include flex(column, space-between)
+            position: fixed
+            @include size(93%, 100%)
+            top: 0
+            right: -100%
+            background-color: $headerBG
+            z-index: 0
+            transition: .3s
+            ul
+                margin-top: 3.2rem
+                color: #e7e7e7
+                font-size: .85rem
+                text-transform: uppercase
+                letter-spacing: .075rem
+                li
+                    padding: .45rem 1.75rem
+                    border-bottom: 1px solid #8a8a8a2c
+            .buttons
+                @include flex(column)
+                button
+                    font-size: .6rem
+                    letter-spacing: .06rem
+                    height: 3.5rem
+                .sign-button
+                    color: #ccc
+                    background-color: transparent
+                    @include flex(row, center, center)
+                    gap: .8rem
+                    box-shadow: 0 -4px 15px -4px rgb(0 0 0 / 50%)
+                    border-top: 1px solid #8a8a8a2c
+                    img
+                        width: 20px
+
+                .download-button
+                    background-color: $blueButton
+                    color: white
+        .right-nav-active
+            right: 0
+            transition: .3s
         .burger
             background-color: $blueButton
             @include size(50px, 100%)
             @include flex(column, space-between, center)
             padding: 1rem .6rem
+            z-index: 1
+            transition: .3s
             .line
                 @include size(100%, 2px)
                 background-color: white
+                transition: .3s
+        .burger-active
+            background-color: #252525
+            position: relative
+            justify-content: center
+            .line
+                width: 60%
+                &:nth-child(1)
+                    transition: .3s
+                    position: absolute
+                    transform: rotate(45deg)
+                &:nth-child(2)
+                    opacity: 0
+                    transition: .1s
+                &:nth-child(3)
+                    transition: .3s
+                    position: absolute
+                    transform: rotate(-45deg)
+                    
         @include responsive_md
             .left-nav
                 gap: 1.5rem
@@ -64,23 +124,32 @@ header
                             
                         
             .right-nav
-                @include flex(row)
                 gap: 1rem
                 height: 100%
-                button
-                    font-size: .6rem
-                    padding: 0 .8rem
-                    letter-spacing: .06rem
-                .sign-button
-                    color: #ccc
-                    background-color: transparent
-                    @include flex(row, $align: center)
-                    gap: .8rem
-                    img
-                        width: 20px
+                position: static
+                @include size(auto, 100%)
+                ul
+                    display: none
+                .buttons
+                    @include flex(row)
+                    height: 100%
+                    button
+                        font-size: .6rem
+                        padding: 0 .8rem
+                        letter-spacing: .06rem
+                        height: auto
+                    .sign-button
+                        color: #ccc
+                        background-color: transparent
+                        @include flex(row, $align: center)
+                        gap: .8rem
+                        box-shadow: none
+                        border-top: none
+                        img
+                            width: 20px
 
-                .download-button
-                    background-color: $blueButton
-                    color: white
+                    .download-button
+                        background-color: $blueButton
+                        color: white
             .burger
                 display: none
