--- a/src/components/layout/header/header.sass
+++ b/src/components/layout/header/header.sass
@@ -12,7 +12,7 @@ header
         .left-nav
             @include flex($align: center)
             margin-left: 1rem
-            z-index: 1
+            z-index: 2
             img
                 width: 30px
             ul
@@ -24,7 +24,7 @@ header
             top: 0
             right: -100%
             background-color: $headerBG
-            z-index: 0
+            z-index: 1
             transition: .3s
             ul
                 margin-top: 3.2rem
@@ -62,7 +62,7 @@ header
             @include size(50px, 100%)
             @include flex(column, space-between, center)
             padding: 1rem .6rem
-            z-index: 1
+            z-index: 2
             transition: .3s
             .line
                 @include size(100%, 2px)
@@ -135,7 +135,7 @@ header
                     height: 100%
                     button
                         font-size: .6rem
-                        padding: 0 .8rem
+                        padding: 0 1.6rem
                         letter-spacing: .06rem
                         height: auto
                     .sign-button
