--- a/src/assets/styles/index.sass
+++ b/src/assets/styles/index.sass
@@ -8,3 +8,15 @@
 //layout
 @import '../../components/layout/header/header'
 @import '../../components/layout/footer/footer'
+@import '../../components/layout/main-header/mainHeader'
+
+
+//pages
+@import '../../view/Main/main'
+
+
+
+#app
+    @include flex(column)
+    flex-grow: 1
+    min-height: 100vh
