--- a/src/components/layout/footer/footer.sass
+++ b/src/components/layout/footer/footer.sass
@@ -2,6 +2,7 @@ footer
     background-color: #202020
     padding: 1rem 1.5rem
     font-family: $openSans
+    align-self: flex-end
     @include responsive_lg
             padding: 1.25rem 4.5rem 2.5rem
     .footer-social
