--- a/src/components/layout/header/header.sass
+++ b/src/components/layout/header/header.sass
@@ -6,6 +6,7 @@ header
     align-items: center
     font-family: $openSans
     overflow-y: hidden
+    align-self: start
     nav
         @include flex(row, space-between, center)
         @include size(100%, 100%)
