--- a/src/components/layout/footer/footer.sass
+++ b/src/components/layout/footer/footer.sass
@@ -33,6 +33,8 @@ footer
     .footer-links
         margin-top: 2rem
         @include flex(column)
+        @media (min-width: 1652px)
+            flex-direction: row
         .footer-links_resources
             h5
                 font-size: .9rem
