--- a/src/view/Home/home.sass
+++ b/src/view/Home/home.sass
@@ -1,3 +1,5 @@
+@import '../../components/home/swiper/mySwiper'
+    
 #home
     .home-container
         width: 90%
@@ -5,5 +7,6 @@
         margin-left: auto
         margin-right: auto
         padding: 0 0.625rem
+        height: 1000vh
         @include responsive_xl
             width: 75%
