--- a/src/components/home/swiper/mySwiper.sass
+++ b/src/components/home/swiper/mySwiper.sass
@@ -58,7 +58,8 @@
                     font-size: 0.875rem
                     text-align: left
                     margin-top: 1rem
-                    p
+                    span
+                        display: block
                         font-size: 1rem
 
     .swiper-pagination
