title swiper done

--- a/src/components/layout/main-header/mainHeader.sass
+++ b/src/components/layout/main-header/mainHeader.sass
@@ -4,6 +4,8 @@
     top: 0
     z-index: 4
     background-color: #121212
+    @include responsive_xl
+        height: 100px
     .main-header-container
         @include flex(row, space-between, center)
         width: 90%
