--- a/src/view/Home/home.sass
+++ b/src/view/Home/home.sass
@@ -1,5 +1,6 @@
 @import '../../components/home/swiper-title/swiper-title-MB/swiperTitleMB'
 @import '../../components/home/swiper-title/swiper-title-PC/swiperTitlePC'
+@import '../../components/home/swiper-product/swiperProduct'
     
 #home
     .home-container
