swiper crousel done

--- a/src/components/layout/main-header/mainHeader.sass
+++ b/src/components/layout/main-header/mainHeader.sass
@@ -1,7 +1,7 @@
 .main-header
     height: 80px
     position: sticky
-    top: 0
+    top: -2px
     z-index: 4
     background-color: #121212
     @include responsive_xl
