--- a/src/view/Home/home.sass
+++ b/src/view/Home/home.sass
@@ -1,14 +1,15 @@
 @import '../../components/home/swiper-title/swiper-title-MB/swiperTitleMB'
 @import '../../components/home/swiper-title/swiper-title-PC/swiperTitlePC'
 @import '../../components/home/swiper-product/swiperProduct'
+@import '../../components/home/swiper-carousel/swiperCarousel'
     
 #home
+    height: 400vh
     .home-container
-        width: 90%
+        width: 100%
         max-width: 100rem
         margin-left: auto
         margin-right: auto
-        padding: 0 0.625rem
-        height: 1000vh
+        padding: 0 1rem
         @include responsive_xl
             width: 75%
