--- a/src/components/home/swiper-title/swiper-title-MB/swiperTitleMB.sass
+++ b/src/components/home/swiper-title/swiper-title-MB/swiperTitleMB.sass
@@ -1,75 +1,76 @@
-.mySwiper  
-    width: 100% 
-    .swiper-wrapper
-        padding: 1rem 0
-        .swiper-slide  
-            text-align: center 
-            font-size: 18px 
-            background: #fff 
-            border-radius: 1rem
-            overflow: hidden
-            position: relative
+.mySwiper-container
+    padding-left: 1rem
+    .mySwiper  
+        width: 100% 
+        .swiper-wrapper
+            padding: 1rem 0
+            .swiper-slide  
+                text-align: center 
+                font-size: 18px 
+                background: #fff 
+                border-radius: 1rem
+                overflow: hidden
+                position: relative
 
-            /* Center slide text vertically */
-            display: -webkit-box 
-            display: -ms-flexbox 
-            display: -webkit-flex 
-            display: flex 
-            -webkit-box-pack: center 
-            -ms-flex-pack: center 
-            -webkit-justify-content: center 
-            justify-content: center 
-            -webkit-box-align: center 
-            -ms-flex-align: center 
-            -webkit-align-items: center 
-            align-items: center 
-            &::after
-                z-index: 1
-                content: ''
-                position: absolute
-                top: 0
-                left: 0
-                @include size(100%, 100%)
-                background-image: linear-gradient(#36333300, #000000b6)
-                
-            img  
-                display: block 
-                width: 100% 
-                height: 100% 
-                object-fit: cover 
+                /* Center slide text vertically */
+                display: -webkit-box 
+                display: -ms-flexbox 
+                display: -webkit-flex 
+                display: flex 
+                -webkit-box-pack: center 
+                -ms-flex-pack: center 
+                -webkit-justify-content: center 
+                justify-content: center 
+                -webkit-box-align: center 
+                -ms-flex-align: center 
+                -webkit-align-items: center 
+                align-items: center 
+                &::after
+                    z-index: 1
+                    content: ''
+                    position: absolute
+                    top: 0
+                    left: 0
+                    @include size(100%, 100%)
+                    background-image: linear-gradient(#36333300, #000000b6)
+                img  
+                    display: block 
+                    width: 100% 
+                    height: 100% 
+                    object-fit: cover 
 
-            .swiper-content
-                position: absolute
-                bottom: 0
-                padding: 25px 20px
-                z-index: 2
-                @include flex(column, $align: flex-start)
-                p
-                    color: #f5f5f5
-                .swiper-content_title
-                    @include font(.563rem, 500)
-                    margin-bottom: 10px
-                    text-transform: uppercase
-                .swiper-content_description
-                    @include font(.875rem, 500, $height: 1.4, $spacing: .2px, $align: left)
-                    height: 5.1rem
-                    overflow: hidden
-                .swiper-content_price
-                    font-size: 0.875rem
-                    text-align: left
-                    margin-top: 1rem
-                    span
-                        display: block
-                        font-size: 1rem
+                .swiper-content
+                    position: absolute
+                    bottom: 0
+                    padding: 25px 20px
+                    z-index: 2
+                    @include flex(column, $align: flex-start)
+                    p
+                        color: #f5f5f5
+                    .swiper-content_title
+                        @include font(.563rem, 500)
+                        margin-bottom: 10px
+                        text-transform: uppercase
+                    .swiper-content_description
+                        @include font(.875rem, 500, $height: 1.4, $spacing: .2px, $align: left)
+                        height: 5.1rem
+                        overflow: hidden
+                    .swiper-content_price
+                        font-size: 0.875rem
+                        text-align: left
+                        margin-top: 1rem
+                        span
+                            display: block
+                            font-size: 1rem
 
-    .swiper-pagination
-        position: static
-        margin: .1rem 0
-        .swiper-pagination-bullet
-            background: white
-            opacity: .3
-            @include size(6px, 6px)
-        .swiper-pagination-bullet-active
-            background: white
-            opacity: 1
+        .swiper-pagination
+            position: static
+            margin: .1rem 0
+            .swiper-pagination-bullet
+                background: white
+                opacity: .3
+                @include size(6px, 6px)
+            .swiper-pagination-bullet-active
+                background: white
+                opacity: 1
 
