--- a/src/components/home/swiper-product/swiperProduct.sass
+++ b/src/components/home/swiper-product/swiperProduct.sass
@@ -1,7 +1,8 @@
 @import './swiper-product-skeleton/swiperProductSkeleton'
     
 .swiper-product_container
-    margin-top: 3rem
+    margin-top: 2rem 
+    margin-bottom: 2rem 
     width: 100%
     .swiper-product
         @include flex(column-reverse)
