--- a/src/components/layout/footer/footer.sass
+++ b/src/components/layout/footer/footer.sass
@@ -3,6 +3,7 @@ footer
     padding: 1rem 1.5rem
     font-family: $openSans
     align-self: flex-end
+    width: 100%
     @include responsive_lg
             padding: 1.25rem 4.5rem 2.5rem
     .footer-social
@@ -11,7 +12,7 @@ footer
         .social-icons
             @include flex($align: center)
             gap: .7rem
-            img
+            svg
                 width: 30px
         .arrow-up_box
             border: 1px solid #ccc
