--- a/src/view/Home/home.sass
+++ b/src/view/Home/home.sass
@@ -2,9 +2,11 @@
 @import '../../components/home/swiper-title/swiper-title-PC/swiperTitlePC'
 @import '../../components/home/swiper-product/swiperProduct'
 @import '../../components/home/swiper-carousel/swiperCarousel'
+@import '../../components/home/free-games/freeGames'
+@import '../../components/home/home-catalog/catalog'
     
 #home
-    height: 400vh
+    padding-bottom: 5.5rem
     .home-container
         width: 100%
         max-width: 100rem
