--- a/src/components/home/swiper-carousel/swiperCarousel.sass
+++ b/src/components/home/swiper-carousel/swiperCarousel.sass
@@ -2,7 +2,8 @@
     
 .swiper-carousel_container
     padding-left: 1rem
-    margin-top: 3rem
+    margin-top: 2.5rem
+    margin-bottom: 2.5rem
     @include responsive_md
         width: 100%
         max-width: 100rem
@@ -41,15 +42,7 @@
                             @media (min-width: 1440px)
                                 font-size: 1.375rem
                         button
-                            background-color: transparent
-                            text-transform: uppercase
-                            @include font(0.563rem, 500, $spacing: 1px)
-                            color: white
-                            border: 1px solid rgba(245, 245, 245, 0.6)
-                            border-radius: 4px
-                            padding: 10px 20px
-                            @media (min-width: 1600px)
-                                font-size: 0.688rem
+                            @extend .view-more-btn
                     ul
                         @include flex(column)
                         li
