--- a/src/components/home/swiper-title/swiper-title-PC/swiperTitlePC.sass
+++ b/src/components/home/swiper-title/swiper-title-PC/swiperTitlePC.sass
@@ -98,7 +98,7 @@
                     margin-top: 3px
                 @media (min-width: 1280px)
                     border-radius: 1rem
-                .test1
+                .image-container
                     border-radius: 4px
                     overflow: hidden
                     flex-shrink: 0
@@ -113,10 +113,10 @@
                         margin: 0 15px
                     @media (min-width: 1600px)
                         flex-basis: 43.5px
-                    .test2
+                    .image-container_second
                         position: relative
                         padding-bottom: calc(4 / 3 * 100%)
-                        .test3
+                        .image-container_third
                             @include flex(row, $align: center)
                             @include size(100%, 100%)
                             position: absolute
@@ -156,3 +156,14 @@
                 background-color: rgba(255,255,255,.08)
 
                     
+.swiper-title-pc_skeleton
+    .swiper-title-pc_skeletonimg
+        @include size(100%, 100%)
+        animation: pulse-bg 1s infinite
+@keyframes pulse-bg
+    0%
+        background-color: #2a2a2a
+    50%
+        background-color: #323232
+    100%
+        background-color: #2a2a2a
