responsive mixins name changed, product page swiper created

--- a/src/assets/styles/utils/_extends.sass
+++ b/src/assets/styles/utils/_extends.sass
@@ -6,5 +6,5 @@
     border: 1px solid rgba(245, 245, 245, 0.6)
     border-radius: 4px
     padding: 10px 20px
-    @media (min-width: 1600px)
+    @include responsive_ul
         font-size: 0.688rem
