--- a/src/assets/styles/utils/_responsive-mixins.sass
+++ b/src/assets/styles/utils/_responsive-mixins.sass
@@ -1,13 +1,28 @@
-@mixin responsive_md
+@mixin responsive_sm
     @media (min-width: 768px)
         @content
 
 
-@mixin responsive_lg  
+@mixin responsive_md
     @media (min-width: 992px)  
         @content
 
     
-@mixin responsive_xl  
+@mixin responsive_ls
     @media (min-width: 1024px)  
+        @content  
+
+
+@mixin responsive_lm
+    @media (min-width: 1280px)  
+        @content   
+
+
+@mixin responsive_l
+    @media (min-width: 1440px)  
+        @content   
+
+
+@mixin responsive_ul
+    @media (min-width: 1600px)  
         @content   
