--- a/src/components/home/swiper-carousel/skeleton/swiperCarouselSkeleton.sass
+++ b/src/components/home/swiper-carousel/skeleton/swiperCarouselSkeleton.sass
@@ -4,9 +4,9 @@
     border-radius: 4px
     overflow: hidden
     flex-shrink: 0
-    @media (min-width: 1440px)
+    @include responsive_l
         @include size(3.75rem, 5rem)
-    @media (min-width: 1600px)
+    @include responsive_ul
         @include size(6rem, 8rem)
     img
         @include size(100%, 100%)
