--- a/src/components/layout/header/header.sass
+++ b/src/components/layout/header/header.sass
@@ -87,7 +87,7 @@ header
                     position: absolute
                     transform: rotate(-45deg)
                     
-        @include responsive_md
+        @include responsive_sm
             .left-nav
                 gap: 1.5rem
                 height: 100%
