--- a/src/view/Home/home.sass
+++ b/src/view/Home/home.sass
@@ -1,6 +1,6 @@
 @import '../../components/home/swiper-title/swiper-title-MB/swiperTitleMB'
 @import '../../components/home/swiper-title/swiper-title-PC/swiperTitlePC'
-@import '../../components/home/swiper-product/swiperProduct'
+@import '../../components/home/swiper-category/swiperCategory'
 @import '../../components/home/swiper-carousel/swiperCarousel'
 @import '../../components/home/free-games/freeGames'
 @import '../../components/home/home-catalog/catalog'
@@ -13,5 +13,5 @@
         margin-left: auto
         margin-right: auto
         padding: 0 1rem
-        @include responsive_xl
+        @include responsive_ls
             width: 75%
