--- a/src/components/home/free-games/freeGames.sass
+++ b/src/components/home/free-games/freeGames.sass
@@ -3,15 +3,15 @@
 .free-games
     margin-top: 2rem
     margin-bottom: 2rem
-    @include responsive_xl
+    @include responsive_ls
         padding: 0 1rem
     .free-games-container
         border-radius: 4px
         background-color: $headerBG
         padding: 2rem 1rem
-        @include responsive_md
+        @include responsive_sm
             padding: 1.875rem
-        @include responsive_xl
+        @include responsive_ls
             margin-left: auto
             margin-right: auto
             width: 75%
