--- a/src/components/home/swiper-title/swiper-title-PC/swiperTitlePC.sass
+++ b/src/components/home/swiper-title/swiper-title-PC/swiperTitlePC.sass
@@ -26,26 +26,26 @@
                 @include flex(column, $align: start)
                 width: 20rem
                 z-index: 2
-                @media (min-width: 1440px)
+                @include responsive_l
                     left: 40px
                     bottom: 40px
-                @media (min-width: 1600px)
+                @include responsive_ul
                     left: 56px
                     bottom: 56px
                 .swiper-title-pc_title
                     @include font(12px, 500, $height: 1.3, $spacing: .5px)
                     text-transform: uppercase
                     margin-bottom: 5px
-                    @include responsive_xl
+                    @include responsive_ls
                         margin-bottom: 10px
                 .swiper-title-pc_desc
                     @include font(1rem, $height: 20px)
                     margin-bottom: 10px
                     height: 5rem
                     overflow: hidden
-                    @media (min-width: 1280px)
+                    @include responsive_lm
                         margin-bottom: 20px
-                    @media (min-width: 1440px)
+                    @include responsive_l
                         @include font(18px, $height: 1.625, $spacing: -.2px)
                         margin-bottom: 30px
                         height: 7.6rem
@@ -75,12 +75,12 @@
         @include flex
         width: 10rem
         margin-left: 1rem
-        @include responsive_xl
+        @include responsive_ls
             width: 11rem
-        @media (min-width: 1440px)
+        @include responsive_l
             width: 11.25rem
             margin-left: 1.25rem
-        @media (min-width: 1600px)
+        @include responsive_ul
             width: 16rem
             margin-left: 2rem
         ul
@@ -104,7 +104,7 @@
                     transition: .3s
                 &:not(:nth-child(1))
                     margin-top: 3px
-                @media (min-width: 1280px)
+                @include responsive_lm
                     border-radius: 1rem
                 .image-container
                     border-radius: 4px
@@ -112,14 +112,14 @@
                     flex-shrink: 0
                     flex-basis: 28px
                     margin: 0 10px
-                    @include responsive_xl
+                    @include responsive_ls
                         flex-basis: 25px
-                    @media (min-width: 1280px)
+                    @include responsive_lm
                         flex-basis: 40px
                         border-radius: .5rem
-                    @media (min-width: 1440px)
+                    @include responsive_l
                         margin: 0 15px
-                    @media (min-width: 1600px)
+                    @include responsive_ul
                         flex-basis: 43.5px
                     .image-container_second
                         position: relative
@@ -141,7 +141,7 @@
                             line-clamp: 2
                     -webkit-box-orient: vertical
                     @include font(12px, $spacing: .17px, $height: 1.5em)
-                    @media (min-width: 1440px)
+                    @include responsive_l
                         @include font(14px, $spacing: .2px, $height: 1.4em)
                     @media  (min-width: 1600px)
                         font-size: 1rem
