--- a/src/components/product/product-swiper/swiperProduct.sass
+++ b/src/components/product/product-swiper/swiperProduct.sass
@@ -49,7 +49,6 @@
                 overflow: hidden
                 flex-basis: 100%
                 flex-shrink: 0
-                // margin-left: 20px
                 .slider-image
                     @include flex(row, center, center)
                     @include size(100%, 100%)
@@ -64,6 +63,7 @@
             @include flex(row, center, center)
             background-color: rgb(38, 38, 38)
             border-radius: 50%
+            cursor: pointer
             svg
                 transform: rotate(-90deg)
                 @include size(1rem, 1rem)
@@ -85,14 +85,13 @@
             ul
                 @include flex(row)
                 width: 400%
-                // transform: translate3d(calc(-25% + -15px), 0px, 0px)
                 transform: translate3d(calc(0% + 0px), 0px, 0px)
                 transition: all 250ms ease-in-out 0s
                 li
                     max-width: 90px
                     position: relative
                     flex-shrink: 0
-                    flex-basis: calc(100%  / 2)
+                    flex-basis: calc((100%  - 120px) / 12)
                     @include responsive_l
                         max-width: 103px
                     &:not(:nth-child(2))
@@ -102,5 +101,13 @@
                         overflow: hidden
                         @include flex
                         @include size(100%, 100%)
+                        transition: opacity 200ms ease-in-out 0s
+                        opacity: .5
+                        cursor: pointer
+                        &:hover
+                            opacity: 1
                         img
                             width: 100%
+                    .active-image
+                        border: 1px solid white
+                        opacity: 1
