product page done

--- a/src/view/Product/product.sass
+++ b/src/view/Product/product.sass
@@ -1,12 +1,16 @@
 @import '../../components/product/product-swiper/swiperProduct'
+@import '../../components/product/right-side-bar/sideBar'
+@import '../../components/product/product-spec/productSpec'
+@import '../../components/product/product-skeleton/productSkeleton'
     
 #product
     padding-bottom: 5.5rem
     .product-container
-        width: 100%
+        width: 90%
         max-width: 100rem
         margin-left: auto
         margin-right: auto
+        @include responsive_sm
         padding: 0 1rem
         @include responsive_ls
             width: 75%
@@ -24,43 +28,26 @@
                 @include responsive_ul
                     @include font(3.125rem, 400, $height: 55px, $spacing: -1px)
 
-
         .product-content
             @include flex(column-reverse)
             @include responsive_sm
                 @include flex(row)
-            .product-swiper
-                // background-color: #23ba62
+            .product-content_detail
                 width: 100%
-                // height: 500px
+                color: white
                 @include responsive_sm
                     min-width: calc(100% - 18rem)
                 @include responsive_ls
                     min-width: calc(100% - 17.5rem)
                 @include responsive_lm
                     min-width: calc(100% - 24rem)
-            aside
-                width: 100%
-                @include responsive_sm
-                    width: 16rem
-                    margin-left: 2rem
-                    flex-shrink: 0
-                    flex-grow: 0
-                @include responsive_ls
-                    width: 16.25rem
-                    margin-left: 1.25rem
-                @include responsive_lm
-                    width: 20rem
-                    margin-left: 4rem
-                .product-side
-                    background-color: #2de111
-                    height: 200px
-                    @include responsive_sm
-                        position: sticky
-                        top: 100px
-        .product-spec
-            background-color: #ccc
-            height: 400px
-            width: 100%
-            @include responsive_lm
-                width: calc(100% - 24rem)
+                p
+                    @include font(1.125rem, $height: 25px,$spacing: -.2px )
+                    margin-top: 2.5rem
+                    @include responsive_ls
+                        font-size: 1rem
+                        margin-top: 3rem
+                    @include responsive_l
+                        font-size: 1.125rem
+                    @include responsive_ul
+                        @include font(1.375rem, $height: 30px,$spacing: -.4px)
