--- a/src/components/product/product-swiper/swiperProduct.sass
+++ b/src/components/product/product-swiper/swiperProduct.sass
@@ -1,113 +1,121 @@
-.product-swiper
-    width: 100%
-    .product-swiper_content
-        position: relative
-        overflow: hidden
-        .product-swiper-content_arrow
-            position: absolute
-            top: 0
-            left: 0
-            @include size(100%, 100%)
-            @include flex(row, space-between, center)
-            z-index: 1
-            &:hover .left-arrow
-                opacity: 1
-                transform: translateX(0%)
-            &:hover .right-arrow
-                opacity: 1
-                transform: translateX(0%)
-                
-            div
-                @include flex(row, center, center)
-                @include size(55px, 100%)
-                cursor: pointer
-                svg
-                    @include size(25px, 25px)
-                    path
-                        fill: white
-            .left-arrow
-                svg
-                    transform: rotate(-90deg)
-                opacity: 0
-                transform: translateX(-100%)
-                background: linear-gradient(270deg, rgba(11, 11, 11, 0) 0%, rgba(11, 11, 11, 0.4) 100%)
-                transition: transform 0.35s cubic-bezier(1, 0.09, 0.03, 0.93) 0s, opacity 0.35s ease 0s
-            .right-arrow
-                svg
-                    transform: rotate(90deg)
-                transform: translateX(100%)
-                opacity: 0
-                background: linear-gradient(270deg, rgba(11, 11, 11, 0.4) 0%, rgba(11, 11, 11, 0) 100%)
-                transition: transform 0.35s cubic-bezier(1, 0.09, 0.03, 0.93) 0s, opacity 0.35s ease 0s
-        .product-swiper-content_slider
-            @include flex(row)
-            transform: translateX(0%)
-            transition: all 250ms ease-in-out 0s
-            li
-                border-radius: 4px
-                position: relative
-                overflow: hidden
-                flex-basis: 100%
-                flex-shrink: 0
-                .slider-image
-                    @include flex(row, center, center)
-                    @include size(100%, 100%)
-                    img
-                        width: 100%
-
-    .product-swiper_items
-        @include flex(row, space-between, center)
-        margin: 20px 0
-        .product-swiper-items-leftArrow
-            @include size(30px, 30px)
-            @include flex(row, center, center)
-            background-color: rgb(38, 38, 38)
-            border-radius: 50%
-            cursor: pointer
-            svg
-                transform: rotate(-90deg)
-                @include size(1rem, 1rem)
-        .product-swiper-items-rightArrow
-            @extend .product-swiper-items-leftArrow
-            svg
-                transform: rotate(90deg)
-        .product-swiper-items_slider
+.product-content_detail
+    .product-swiper
+        width: 100%
+        .product-swiper_content
+            position: relative
             overflow: hidden
-            flex: 1 1 0%
-            max-width: 18.75rem
-            // @include responsive_ls
-            //     max-width: 25.313rem
-            // @include responsive_l
-            //     max-width: 43rem
-            // @include responsive_ul
-            //     max-width: 50.688rem
+            .product-swiper-content_arrow
+                position: absolute
+                top: 0
+                left: 0
+                @include size(100%, 100%)
+                @include flex(row, space-between, center)
+                z-index: 1
+                &:hover .left-arrow
+                    opacity: 1
+                    transform: translateX(0%)
+                &:hover .right-arrow
+                    opacity: 1
+                    transform: translateX(0%)
+                    
+                div
+                    @include flex(row, center, center)
+                    @include size(55px, 100%)
+                    cursor: pointer
+                    svg
+                        @include size(25px, 25px)
+                        path
+                            fill: white
+                .left-arrow
+                    opacity: 1
+                    transform: translateX(0%)
+                    background: linear-gradient(270deg, rgba(11, 11, 11, 0) 0%, rgba(11, 11, 11, 0.4) 100%)
+                    transition: transform 0.35s cubic-bezier(1, 0.09, 0.03, 0.93) 0s, opacity 0.35s ease 0s
+                    @include responsive_sm
+                        opacity: 0
+                        transform: translateX(-100%)
 
-            ul
+                    svg
+                        transform: rotate(-90deg)
+                .right-arrow
+                    transform: translateX(0%)
+                    opacity: 1
+                    background: linear-gradient(270deg, rgba(11, 11, 11, 0.4) 0%, rgba(11, 11, 11, 0) 100%)
+                    transition: transform 0.35s cubic-bezier(1, 0.09, 0.03, 0.93) 0s, opacity 0.35s ease 0s
+                    @include responsive_sm
+                        opacity: 0
+                        transform: translateX(100%)
+                    svg
+                        transform: rotate(90deg)
+            .product-swiper-content_slider
                 @include flex(row)
-                width: 400%
-                transform: translate3d(calc(0% + 0px), 0px, 0px)
+                transform: translateX(0%)
                 transition: all 250ms ease-in-out 0s
                 li
-                    max-width: 90px
+                    border-radius: 4px
                     position: relative
+                    overflow: hidden
+                    flex-basis: 100%
                     flex-shrink: 0
-                    flex-basis: calc((100%  - 120px) / 12)
-                    @include responsive_l
-                        max-width: 103px
-                    &:not(:nth-child(2))
-                        margin-left: 15px
-                    .product-swiper-items_image
-                        border-radius: 4px
-                        overflow: hidden
-                        @include flex
+                    .slider-image
+                        @include flex(row, center, center)
                         @include size(100%, 100%)
-                        transition: opacity 200ms ease-in-out 0s
-                        opacity: .5
-                        cursor: pointer
-                        &:hover
-                            opacity: 1
                         img
                             width: 100%
-                    .active-image
-                        border: 1px solid white
-                        opacity: 1
+
+        .product-swiper_items
+            @include flex(row, space-between, center)
+            margin: 20px 0
+            .product-swiper-items-leftArrow
+                @include size(30px, 30px)
+                @include flex(row, center, center)
+                background-color: rgb(38, 38, 38)
+                border-radius: 50%
+                cursor: pointer
+                svg
+                    transform: rotate(-90deg)
+                    @include size(1rem, 1rem)
+            .product-swiper-items-rightArrow
+                @extend .product-swiper-items-leftArrow
+                svg
+                    transform: rotate(90deg)
+            .product-swiper-items_slider
+                overflow: hidden
+                flex: 1 1 0%
+                max-width: 18.75rem
+                // @include responsive_ls
+                //     max-width: 25.313rem
+                // @include responsive_l
+                //     max-width: 43rem
+                // @include responsive_ul
+                //     max-width: 50.688rem
+
+                ul
+                    @include flex(row)
+                    width: 400%
+                    transform: translate3d(calc(0% + 0px), 0px, 0px)
+                    transition: all 250ms ease-in-out 0s
+                    li
+                        max-width: 90px
+                        position: relative
+                        flex-shrink: 0
+                        flex-basis: calc((100%  - 120px) / 12)
+                        @include responsive_l
+                            max-width: 103px
+                        &:not(:nth-child(2))
+                            margin-left: 15px
+                        .product-swiper-items_image
+                            border-radius: 4px
+                            overflow: hidden
+                            @include flex
+                            @include size(100%, 100%)
+                            transition: opacity 200ms ease-in-out 0s
+                            opacity: .5
+                            cursor: pointer
+                            &:hover
+                                opacity: 1
+                            img
+                                width: 100%
+                        .active-image
+                            border: 1px solid white
+                            opacity: 1
