product page skeleton done

--- a/src/components/layout/header/header.sass
+++ b/src/components/layout/header/header.sass
@@ -49,7 +49,7 @@ header
                     gap: .8rem
                     box-shadow: 0 -4px 15px -4px rgb(0 0 0 / 50%)
                     border-top: 1px solid #8a8a8a2c
-                    img
+                    svg
                         width: 20px
 
                 .download-button
