browse page sort route done

--- a/src/assets/styles/index.sass
+++ b/src/assets/styles/index.sass
@@ -16,6 +16,7 @@
 @import '../../view/Main/main'
 @import '../../view/Home/home'
 @import '../../view/Product/product'
+@import '../../view/Browse/browse'
 
 
 
